# pki-for-skills

./: .gitignore  PKI-architecture-design.md  README.manifest.json  README.md  pyproject.toml  test-registry.db
.agents/workflows/: generate-abc-prompts.md
docs/: PKI-architecture-design.md  abc_canonical_prompts_dataset.json  canonical-prompts.md  for-expansion.md  vm-abc-experiment-guide.md
src/pki_for_skills.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/pki_skills/: __init__.py  cli.py  registry.py
src/pki_skills/abc/: __init__.py  checksum.py  embedding.py  sandbox.py
src/pki_skills/cli/: main.py
src/pki_skills/core/: __init__.py  crypto.py  key_rotation.py  manifest.py  verifier.py
src/pki_skills/plugins/: __init__.py  claude.py  codex.py  hermes.py
src/pki_skills/registry/: __init__.py  registry.py
test-keys/: pki-skills-private.key  pki-skills-public.key
tests/: test_pki.py
