[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pki-for-skills"
version = "0.1.0"
description = "Public Key Infrastructure for Agent Skills - Cryptographic verification and trust management"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "cryptography>=41.0.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
ml = [
    "torch>=2.0.0",
    "sentence-transformers>=2.2.2",
]

[project.scripts]
pki-skills = "pki_skills.cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]
